Change description of package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: fr_fire_auth
-description: Fastest way to implement Firebase Authentication to your project.
+description: Fastest way to implement Firebase Authentication to your Flutter App.
 version: 0.0.1
 homepage: null
 
