Add homepage url

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: fr_fire_auth
 description: Fastest way to implement Firebase Authentication to your Flutter App.
 version: 0.0.1
-homepage: null
+homepage: https://github.com/sfriday/FRFireAuth
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
